[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_dashboard"
version = "0.1.0"
description = "Interactive data explorer built with Panel, HoloViews, and Bokeh"
authors = [
  { name="Jonas Olsen", email="jonaolse@stud.ntnu.no" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"

dependencies = [
  "panel>=1.8.2",
  "holoviews>=1.21",
  "bokeh>=3.8.0",
  "pandas>=2.3",
  "hvplot>=0.12",
  "numpy>=2.3.4"
]